Bug 972081 - Highlighting seems broken with APZC enabled r=kats,fabrice a=1.3t+