dom/ipc/TabChild.h
@@ -504,6 +504,7 @@ private:
     bool mUpdateHitRegion;
     bool mContextMenuHandled;
     bool mWaitingTouchListeners;
+    void FireSingleTapEvent(LayoutDevicePoint aPoint);
 
     DISALLOW_EVIL_CONSTRUCTORS(TabChild);
 };
